# xyclaw

./: .gitignore  Hamster_OKX_Portable.spec  OKX_Desktop_Portable.spec  OKX桌面程序.spec  OKX桌面程序_单文件.spec  README.md  pyproject.toml  启动OKX桌面程序.bat  启动OKX桌面程序_调试.bat  启动打包版.bat  桌面版使用说明.md
app/: app_icon.py  chart_windows.py  desktop_app.py  desktop_main.pyw  live_main.py  main.py  services.py
backtest/: chart_report.py  costs.py  engine.py  grid_report.py  metrics_drawdown.py  metrics_trade.py  scorer.py  sltp_matrix.py
core/: indicators.py  risk_engine.py  strategy_ema58.py  types.py
data/: fetch_history.py  okx_rest.py  resample.py
db/: schema.sql
live/: auth.py  config.py  okx_rest.py  okx_ws.py  order_router.py  precision.py  state_store.py  trader.py
tests/: test_live_strategy_slots.py  test_live_trader.py  test_trend_mode.py
